Fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,3 @@ body {
 .nav-link:hover{
     text-decoration: underline;
 }
-
-#page-footer{
-}
